UI updates to Change Password Dialog

--- a/client/src/changepassword/success-change-password.component.html
+++ b/client/src/changepassword/success-change-password.component.html
@@ -23,7 +23,7 @@
 <div class="ias-dialog success-change-password-dialog">
     <div class="ias-dialog-container">
         <div class="ias-dialog-label">
-            <div class="ias-title" ng-bind="('Title_ChangePassword' | translate) + ' - ' + $ctrl.personUsername"></div>
+            <div class="ias-title" ng-bind="'Title_ChangePassword' | translate"></div>
         </div>
 
         <div class="ias-dialog-content">
