Fix PeopleSearch and Help Desk header display problems

--- a/client/src/helpdesk/helpdesk-detail.component.scss
+++ b/client/src/helpdesk/helpdesk-detail.component.scss
@@ -21,8 +21,8 @@
  */
 
 help-desk-detail {
-  .page-content-title {
-    margin-right: 20px;
+  #page-content-title {
+    margin-bottom: 0;
   }
 
   .ias-tile {
