--- a/client/src/peoplesearch/orgchart-search.component.scss
+++ b/client/src/peoplesearch/orgchart-search.component.scss
@@ -22,6 +22,10 @@
 
 
 org-chart-search {
+  #page-content-title {
+    margin-bottom: 0;
+  }
+
   display: flex;
   flex-flow: column nowrap;
   height: 100%;
