--- a/client/src/peoplesearch/peoplesearch-cards.component.scss
+++ b/client/src/peoplesearch/peoplesearch-cards.component.scss
@@ -21,6 +21,10 @@
  */
 
 people-search-cards {
+  #page-content-title {
+    margin-bottom: 0;
+  }
+
   display: flex;
   flex-flow: column nowrap;
   height: 100%;
