--- a/client/src/peoplesearch/peoplesearch-table.component.scss
+++ b/client/src/peoplesearch/peoplesearch-table.component.scss
@@ -22,6 +22,10 @@
 
 
 people-search-table {
+    #page-content-title {
+        margin-bottom: 0;
+    }
+
     display: flex;
     flex-flow: column nowrap;
     height: 100%;
