--- a/client/src/helpdesk/helpdesk-detail.component.scss
+++ b/client/src/helpdesk/helpdesk-detail.component.scss
@@ -36,6 +36,20 @@ help-desk-detail {
     > .help-desk-buttons {
       margin-left: 15px;
 
+      > #helpdesk-go-back-icon {
+        position: absolute;
+        top: 50px;
+        margin-left: 115px;
+        width: 28px;
+      }
+
+      > #helpdesk-refresh-icon {
+        position: absolute;
+        top: 50px;
+        margin-left: 80px;
+        width: 28px;
+      }
+
       > .ias-button {
         display: block;
         margin-bottom: 5px;
