Fix UI bugs on Helpdesk detail page - header and person card should not change heights when in wide layout; profile tab should be open on page load

--- a/client/src/helpdesk/helpdesk-detail.component.html
+++ b/client/src/helpdesk/helpdesk-detail.component.html
@@ -77,8 +77,7 @@
         <div class="ias-tabset">
             <div class="ias-tab"
                  ias-toggle-active="ias-active"
-                 ias-toggle="profileTab"
-                 ng-if="$ctrl.person.profileData && $ctrl.person.profileData.length">
+                 ias-toggle="profileTab">
                 {{'Field_Profile' | translate}}
             </div>
             <div class="ias-tab"
