add basic auth header support to remote web service client and config

--- a/server/src/main/webapp/public/resources/style.css
+++ b/server/src/main/webapp/public/resources/style.css
@@ -1568,11 +1568,13 @@ html[dir="rtl"] .message.message-error .errorDetail {
 }
 
 .tab-container > .label:active {
-    /*background: #ccc;*/
+    background: #ccc;
 }
 
 .tab-container > .input:focus + .label {
     z-index: 1;
+    color:red;
+    background-color:red;
 }
 
 .tab-container > .input:checked + .label {
