Autofocus inputs in Helpdesk and Peoplesearch modules

--- a/client/src/components/changepassword/success-change-password.component.html
+++ b/client/src/components/changepassword/success-change-password.component.html
@@ -32,7 +32,7 @@
             <ias-button ng-click="$ctrl.togglePasswordMasked()" ng-if="$ctrl.maskPasswords">
                 {{ 'Button_Show' | translate }}
             </ias-button>
-            <input ng-model="$ctrl.password" ng-hide="$ctrl.passwordMasked" readonly type="text">
+            <input ng-model="$ctrl.password" ng-hide="$ctrl.passwordMasked" readonly type="text" autofocus>
         </div>
 
         <div class="ias-actions">
