--- a/client/src/components/changepassword/type-change-password.component.html
+++ b/client/src/components/changepassword/type-change-password.component.html
@@ -32,8 +32,8 @@
                 <tbody>
                 <tr>
                     <td>
-                        <input ng-model="$ctrl.password1" ng-hide="$ctrl.passwordMasked" type="text">
-                        <input ng-model="$ctrl.password1" ng-show="$ctrl.passwordMasked" type="password">
+                        <input autofocus ng-model="$ctrl.password1" ng-hide="$ctrl.passwordMasked" type="text">
+                        <input autofocus ng-model="$ctrl.password1" ng-show="$ctrl.passwordMasked" type="password">
                     </td>
                     <td>
                         <div class="strength-meter"
