Fixed a problem where the title text wasn't being properly clipped in IE11.

--- a/client/src/modules/peoplesearch/person-details-dialog.component.scss
+++ b/client/src/modules/peoplesearch/person-details-dialog.component.scss
@@ -50,6 +50,10 @@
   padding: 15px;
 }
 
+[data-browserType=ie] .person-details-dialog-header > .ias-header > h2 {
+  width: 185px;
+}
+
 .person-details-content {
   padding: 15px;
 }
