add support for photo uploads in update profile

--- a/server/src/main/webapp/public/resources/style.css
+++ b/server/src/main/webapp/public/resources/style.css
@@ -1707,3 +1707,16 @@ table.ias-table, table.ias-table td {
 #certDebugGrid .dgrid-hider-toggle {
     z-index: 900;
 }
+
+.formfield-photo {
+    border: solid 1px;
+    width: auto;
+    height: 80px;
+}
+
+.formfield-photo-missing {
+    background-image: url("UserPhoto.png");
+    background-repeat: no-repeat;
+    background-size: 100px 100px;
+    width: auto;
+    height: 80px;
