Clean up helpdesk module. Add missing translation strings, add title showing when there are no responses, fix various css issues including flex and RTL display, fix javascript error thrown in IE when Verify button is clicked.

--- a/client/src/components/changepassword/type-change-password.component.scss
+++ b/client/src/components/changepassword/type-change-password.component.scss
@@ -87,3 +87,20 @@
     }
   }
 }
+
+[dir="rtl"] {
+  .ias-dialog {
+    &.type-change-password-dialog {
+      .ias-dialog-content {
+        table {
+          .strength-meter {
+            .strength {
+              left: auto;
+              right: 0;
+            }
+          }
+        }
+      }
+    }
+  }
+}
