--- a/client/src/modules/peoplesearch/peoplesearch.scss
+++ b/client/src/modules/peoplesearch/peoplesearch.scss
@@ -26,6 +26,8 @@ body, html {
 }
 
 body {
+  background-color: transparent;  // Can remove once https://github.com/MicroFocus/ux-ias/issues/22 is resolved
+
   > ui-view {
     box-sizing: border-box;
     display: block;
@@ -69,14 +71,6 @@ body {
   color: #01a9e7;
 }
 
-[dir="rtl"] {
-  .people-search-component {
-    .search-info-container {
-      text-align: right;
-    }
-  }
-}
-
 .ias-avatar {
   background: transparent url('../../../images/user.png') no-repeat center center;
   background-size: contain;
@@ -112,6 +106,22 @@ body {
     .ias-dialog-container {
       max-width: 100%;
       width: 375px;
+    }
+  }
+}
+
+
+[dir="rtl"] {
+  .ias-search {
+    >.ias-icon-button {
+      right: auto;         // Can remove once https://github.com/MicroFocus/ux-ias/issues/18 is fixed
+    }
+  }
+
+  .help-desk-search-component,
+  .people-search-component {
+    .search-info-container {
+      text-align: right;
     }
   }
 }
