--- a/client/src/modules/peoplesearch/peoplesearch-cards.component.scss
+++ b/client/src/modules/peoplesearch/peoplesearch-cards.component.scss
@@ -57,6 +57,10 @@ people-search-cards {
     }
   }
 
+  .ias-search {
+    margin-right: 10px;
+  }
+
   > .people-search-component-content {
     flex: 1 1;
     overflow: auto;
