fix incorrect case for helpdesk title display key

--- a/client/src/modules/helpdesk/helpdesk-search-cards.component.html
+++ b/client/src/modules/helpdesk/helpdesk-search-cards.component.html
@@ -21,7 +21,7 @@
   -->
 
 <div class="ias-header">
-    <h2 id="page-content-title" translate="Title_HelpDesk">Help Desk</h2>
+    <h2 id="page-content-title" translate="Title_Helpdesk">Help Desk</h2>
     <ias-search-box ng-model="$ctrl.query" ng-model-options="{debounce: $ctrl.inputDebounce}"
                     placeholder="{{'Placeholder_Search' | translate}}">
     </ias-search-box>
