--- a/client/src/modules/helpdesk/helpdesk-detail.component.html
+++ b/client/src/modules/helpdesk/helpdesk-detail.component.html
@@ -21,7 +21,7 @@
   -->
 
 <div class="ias-header">
-    <h2 id="page-content-title" translate="Title_HelpDesk">Help Desk</h2>
+    <h2 id="page-content-title" translate="Title_Helpdesk">Help Desk</h2>
     <span class="ias-fill"></span>
     <div class="help-desk-icons">
         <ias-button id="helpdesk-refresh-icon" class="ias-icon-button"
