Updated the code to no longer show the new password if the password type is random.  Also fixed a NullPointerException in the random password generator.

--- a/client/src/components/changepassword/success-change-password.component.html
+++ b/client/src/components/changepassword/success-change-password.component.html
@@ -28,11 +28,13 @@
 
         <div class="ias-dialog-content">
             <p ng-bind="$ctrl.successMessage"></p>
-            <span ng-bind="'Field_NewPassword' | translate"></span>
-            <ias-button ng-click="$ctrl.togglePasswordMasked()" ng-if="$ctrl.maskPasswords">
-                {{ 'Button_Show' | translate }}
-            </ias-button>
-            <input ng-model="$ctrl.password" ng-hide="$ctrl.passwordMasked" readonly type="text" autofocus>
+            <div ng-if="$ctrl.displayNewPassword">
+                <span ng-bind="'Field_NewPassword' | translate"></span>
+                <ias-button ng-click="$ctrl.togglePasswordMasked()" ng-if="$ctrl.maskPasswords">
+                    {{ 'Button_Show' | translate }}
+                </ias-button>
+                <input ng-model="$ctrl.password" ng-hide="$ctrl.passwordMasked" readonly type="text" autofocus>
+            </div>
         </div>
 
         <div class="ias-actions">
